<resources>
    <string name="app_name">Body Transformation For Android</string>
    <string name="categoria">CATEGORIA</string>
    <string name="piernas_principiante">Piernas - Principiante</string>
    <string name="ejercicios">EJERCICIOS</string>
    <string name="_10">10</string>
    <string name="calorias">CALORIAS</string>
    <string name="_100">100</string>
    <string name="ajustes">AJUSTES</string>
    <string name="opciones">OPCIONES</string>
    <string name="eliminar_historial">Eliminar historial</string>
    <string name="salir">Salir</string>
    <string name="inicio">Inicio</string>
    <string name="informes">Informes</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="historial">HISTORIAL</string>
    <string name="historial_de_ejercicios">HISTORIAL DE EJERCICIOS</string>
    <string name="nombre_categoria">NOMBRE CATEGORIA</string>
    <string name="indicaciones">INDICACIONES</string>
    <string name="descripcion_indicaciones">Antes de empezar recuerda calentar.\n\nEn algunos ejercicios se requiere de equipo adicional (si no cuentas con alguno puedes reemplazarlo por algun otro objeto).\n\nCuando estes listo da click en INICIAR.</string>
    <string name="content_descripcion_gifs">imagen</string>
    <string name="siguiente">siguiente</string>
    <string name="atras">Atras</string>
    <string name="men">Menú</string>
    <string name="informes_uppercase">INFORMES</string>
    <string name="indice_de_masa_corporal_imc">INDICE DE MASA CORPORAL (IMC)</string>
    <string name="peso_kg">PESO (Kg)</string>
    <string name="peso">Peso</string>
    <string name="altura_m">ALTURA (m)</string>
    <string name="altura">Altura</string>
    <string name="imc_a_m_m">IMC (a/m*m)</string>
    <string name="imc">IMC</string>
    <string name="cambiar_imc">Cambiar IMC</string>
    <string name="frase">Frase</string>
    <string name="categorias">CATEGORIAS</string>
    <string name="principiante">PRINCIPIANTE</string>
    <string name="abdominales_principiante">ABDOMINALES PRINCIPIANTE</string>
    <string name="espalda_y_hombros_principiante">ESPALDA Y HOMBROS PRINCIPIANTE</string>
    <string name="pecho_principiante">PECHO PRINCIPIANTE</string>
    <string name="brazo_principiante">BRAZO PRINCIPIANTE</string>
    <string name="pierna_principiante">PIERNA PRINCIPIANTE</string>
    <string name="intermedio">INTERMEDIO</string>
    <string name="abdominales_intermedio">ABDOMINALES INTERMEDIO</string>
    <string name="espalda_y_hombros_intermedio">ESPALDA Y HOMBROS INTERMEDIO</string>
    <string name="pecho_intermedio">PECHO INTERMEDIO</string>
    <string name="brazo_intermedio">BRAZO INTERMEDIO</string>
    <string name="pierna_intermedio">PIERNA INTERMEDIO</string>
    <string name="avanzado">AVANZADO</string>
    <string name="abdominales_avanzado">ABDOMINALES AVANZADO</string>
    <string name="espalda_y_hombros_avanzado">ESPALDA Y HOMBROS AVANZADO</string>
    <string name="pecho_avanzado">PECHO AVANZADO</string>
    <string name="brazo_avanzado">BRAZO AVANZADO</string>
    <string name="pierna_avanzado">PIERNA AVANZADO</string>
    <string name="name_app">BODY TRANSORMATION</string>
    <string name="felicidades">FELICIDADES</string>
    <string name="que_bien_lo_haz_hecho">¡QUE BIEN LO HAZ HECHO!</string>
    <string name="nombre_de_la_categoria">Nombre de la categoria</string>
    <string name="n">n</string>
    <string name="kcal">KCAL</string>
    <string name="reintentar">Reintentar</string>
    <string name="introduce_el_peso">Introduce el peso</string>
    <string name="introduce_la_altura">Introduce la altura</string>
    <string name="avisos">Avisos</string>
    <string name="avisosUpper">AVISOS</string>
</resources>