<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navColor"
    tools:context=".activity_informes">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/informes_uppercase"
                android:textColor="@color/textcolorcontrasteimage"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textSize="@dimen/TitlesDimen"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bordes_redondo_item"
            android:elevation="@dimen/elevacion_dimen"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/indice_de_masa_corporal_imc"
                android:textAlignment="center"
                android:background="@drawable/bordedown"
                android:textColor="@color/textBlackWhite"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="@dimen/Subtitle"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlackWhite"
                        android:text="@string/peso_kg"
                        android:textSize="@dimen/TextOneDime"
                        android:textStyle="bold"
                        android:padding="20dp"/>


                    <TextView
                        android:id="@+id/valuePeso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlackWhite"
                        android:padding="20dp"
                        android:text="@string/peso"
                        android:textSize="@dimen/TextOneDime"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/altura_m"
                        android:textColor="@color/textBlackWhite"
                        android:padding="20dp"
                        android:textSize="@dimen/TextOneDime"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/valueAltura"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlackWhite"
                        android:padding="20dp"
                        android:text="@string/altura"
                        android:textSize="@dimen/TextOneDime"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlackWhite"
                        android:text="@string/imc_a_m_m"
                        android:padding="20dp"
                        android:textSize="@dimen/TextOneDime"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/resultadoImc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlackWhite"
                        android:padding="20dp"
                        android:textSize="@dimen/TextOneDime"
                        android:text="@string/imc" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cambiar_imc"
                        android:textColor="@color/main"
                        android:background="@drawable/degradado_fade"
                        android:elevation="@dimen/elevacion_dimen"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:id="@+id/changeImc">
                    </Button>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/graficaimc"
                        android:layout_margin="20dp"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="@dimen/border_radius"
                        >

                        <TextView
                            android:id="@+id/recomendaciones"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/imc"
                            android:gravity="center"
                            android:layout_gravity="center_horizontal"
                            android:padding="20dp"
                            android:textSize="@dimen/TextOneDime"/>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/inicio"
                    android:onClick="statusInicio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/inicio"
                    android:drawableTop="@drawable/ic_baseline_home_24"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/TextTwoDimen"
                    android:background="@drawable/lineaborde"
                    tools:ignore="Suspicious0dp,UsingOnClickInXml"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/informesButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/informes"
                    android:drawableTop="@drawable/ic_baseline_assessment_focus_24"
                    android:textColor="@color/main"
                    android:textSize="@dimen/TextTwoDimen"
                    android:background="@drawable/lineaborde"
                    tools:ignore="ButtonStyle,Suspicious0dp"/>

                <Button
                    android:id="@+id/estadisticasButton"
                    android:onClick="statusEstadisticas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/estadisticas"
                    android:drawableTop="@drawable/ic_baseline_assignment_24"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/TextTwoDimen"
                    android:background="@drawable/lineaborde"
                    tools:ignore="ButtonStyle,Suspicious0dp,UsingOnClickInXml"/>

                <Button
                    android:id="@+id/ajustesButton"
                    android:onClick="statusAjustes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/ajustes"
                    android:drawableTop="@drawable/ic_baseline_settings_24"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/TextTwoDimen"
                    android:background="@drawable/lineaborde"
                    tools:ignore="Suspicious0dp,UsingOnClickInXml"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>