<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navColor"
    tools:context=".activity_estadisticas">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/historial"
                android:textColor="@color/textcolorcontrasteimage"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textSize="@dimen/TitlesDimen"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"

            android:elevation="@dimen/elevacion_dimen"
            android:background="@drawable/bordes_redondo_item"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:text="@string/historial_de_ejercicios"
                android:background="@drawable/bordedown"
                android:textColor="@color/textBlackWhite"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="@dimen/Subtitle"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/listahistorial"/>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/inicio"
                    android:onClick="statusInicio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/inicio"
                    android:drawableTop="@drawable/ic_baseline_home_24"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/TextTwoDimen"
                    android:background="@drawable/lineaborde"
                    tools:ignore="ButtonStyle,Suspicious0dp,UsingOnClickInXml"/>

                <Button
                    android:id="@+id/informesButton"
                    android:onClick="statusInformes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/estadisticas"
                    android:drawableTop="@drawable/ic_baseline_assessment_24"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/TextTwoDimen"
                    android:background="@drawable/lineaborde"
                    tools:ignore="ButtonStyle,Suspicious0dp,UsingOnClickInXml"/>

                <Button
                    android:id="@+id/estadisticasButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/estadisticas"
                    android:drawableTop="@drawable/ic_baseline_assignment_focus_24"
                    android:textColor="@color/main"
                    android:textSize="@dimen/TextTwoDimen"
                    android:background="@drawable/lineaborde"
                    tools:ignore="ButtonStyle,Suspicious0dp"/>

                <Button
                    android:id="@+id/ajustesButton"
                    android:onClick="statusAjustes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/ajustes"
                    android:drawableTop="@drawable/ic_baseline_settings_24"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/TextTwoDimen"
                    android:background="@drawable/lineaborde"
                    tools:ignore="Suspicious0dp,UsingOnClickInXml"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>